Implementacja DodajAutobus pod serwer// fake delay do prezentacji HueHue + DodajPrzystanek tez fake delay

--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -62,7 +62,7 @@
         button.panelDodajPrzystanek__navigation__item.green Dodaj Przystanek
         a(href="/#/busstop").panelDodajPrzystanek__navigation__item.gray.-abort Anuluj
       .panelDodajPrzystanek__dataLoader(ng-show="sendForm")
-        .panelDodajPrzystanek__dataLoader__svg
+        .panelDodajPrzystanek__dataLoader__svg(ng-hide="CallbackServera")
           svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 80 80', xml:space='preserve')
             path(fill='#00aef0', d='M10,40c0,0,0-0.4,0-1.1c0-0.3,0-0.8,0-1.3c0-0.3,0-0.5,0-0.8c0-0.3,0.1-0.6,0.1-0.9c0.1-0.6,0.1-1.4,0.2-2.1\
                 c0.2-0.8,0.3-1.6,0.5-2.5c0.2-0.9,0.6-1.8,0.8-2.8c0.3-1,0.8-1.9,1.2-3c0.5-1,1.1-2,1.7-3.1c0.7-1,1.4-2.1,2.2-3.1\
@@ -79,6 +79,7 @@
                 c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z')
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
         .panelDodajPrzystanek__dataLoader__text
-          p {{ message }}
-          a(href="/#/busstop").panelDodajPrzystanek__navigation__item.green Przystanek został dodany pomyślnie!
+          p(ng-hide="CallbackServera") {{ message }}
+          a(href="/#/busstop" ng-show="CallbackServeraPositive").panelDodajPrzystanek__navigation__item.green Przystanek został dodany pomyślnie!
+          a(href="/#/bus/add" ng-show="CallbackServeraNegative").panelDodajPrzystanek__navigation__item.red Coś poszło nie tak...
 
