--- a/app/jade/panelDodajAutobus.jade
+++ b/app/jade/panelDodajAutobus.jade
@@ -64,5 +64,6 @@
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
         .panelDodajAutobus__dataLoader__text
           p(ng-hide="CallbackServera") {{ message }}
-          a(href="/#/bus" ng-show="CallbackServera").panelDodajAutobus__navigation__item.green Autobus został dodany pomyślnie!
+          a(href="/#/bus" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green Autobus został dodany pomyślnie!
+          a(href="/#/bus/add" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red Coś poszło nie tak...
 
