Implementacja dodawania uzytkownikow

--- a/app/blocks/panelDodajUser/_panelDodajUser.sass
+++ b/app/blocks/panelDodajUser/_panelDodajUser.sass
@@ -201,3 +201,13 @@
       font-size: 1.8em !important
   &__icon
     font-size: 3em
+  &__dataLoader
+    &__svg
+      height: 200px
+      width: 200px
+      margin: 0 auto
+    &__text
+      display: block
+      text-align: center
+      p
+        margin-bottom: 30px
