--- a/app/blocks/panelDodajUser/_panelDodajUser.sass
+++ b/app/blocks/panelDodajUser/_panelDodajUser.sass
@@ -65,6 +65,7 @@
   &__text
     color: #88969F
     padding: 5px
+    margin-bottom: 15px
   &__alert
     font-family: Lato, sans-serif
     font-weight: 400
