--- a/app/jade/panelWyswietlPrzystanek.jade
+++ b/app/jade/panelWyswietlPrzystanek.jade
@@ -95,6 +95,6 @@
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
         .panelDodajAutobus__dataLoader__text
           p(ng-hide="CallbackServera") {{ message }}
-          a(href="/#/bus" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green Przystanek został zaktualizowany pomyślnie!
-          a(href="/#/bus/" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red Coś poszło nie tak...
+          a(href="/#/busstop" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green Przystanek został zaktualizowany pomyślnie!
+          a(href="/#/busstop/" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red Coś poszło nie tak...
 
