--- a/app/jade/panelLogin.jade
+++ b/app/jade/panelLogin.jade
@@ -25,7 +25,7 @@
         label(for="check")
           span.icon
           |  Zapamiętaj mnie
-      button(type="submit") Zaloguj się
+      button Zaloguj się
     .panelLogin__navigation Nie masz konta?
       a(href="/#/register").panelLogin__ToRegister Zarejestruj się.
     .panelLogin__navigation Nie pamietasz hasła?
