--- a/app/blocks/_grid.sass
+++ b/app/blocks/_grid.sass
@@ -48,11 +48,11 @@ body
     display: flex
     flex-wrap: wrap
 
-header &
-  display: flex
-  flex-wrap: wrap
-  @media (max-width: $screen-lg)
-    display: block
+//header &
+//  display: flex
+//  flex-wrap: wrap
+//  @media (max-width: $screen-lg)
+//    display: block
   
 header
   transition: all 0.28s linear 0s
