--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -122,8 +122,7 @@
     th
       background-color: #2196F3
       color: white
-      line-height: 30px
-      padding: 0 5px
+      padding: 7px 5px
     td
       text-align: center
       padding: 5px
