--- a/app/jade/panelPrzystanki.jade
+++ b/app/jade/panelPrzystanki.jade
@@ -39,6 +39,35 @@
           option(value=1) Tak
       .panelPrzystanki__table
         table.responsive(wt-responsive-table ng-controller="BusstopController")
+          thead
+            tr
+              th Nazwa przystanku
+              th Ulica
+              th Typ Przystanku
+              th Biletomat
+              th Kiosk
+              th Zarządzanie
+          tbody
+            tr(ng-repeat="przystanek in przystanki | filter:przystanekFilter | filter:{ BusStopStatus: '!0'} as filtrowanePrzystanku")
+              td {{przystanek.Name}}
+              td {{przystanek.LocalizationString}}
+              td {{przystanek.BusStopTypeName}}
+              td {{przystanek.GotMachineName}}
+              td {{przystanek.GotKioskName}}
+              td
+                a(href="/#/").navigation
+                  i.ionicons.ion-ios-location
+                a(href="/#/busstop/show/{{ przystanek.Id }}").navigation
+                  i.ionicons.ion-settings
+                a(href="/#/busstop/delete/{{ przystanek.Id }}").navigation
+                  i.ionicons.ion-android-cancel.-red
+            tr(ng-hide="filtrowanePrzystanku.length")
+              td(colspan="6").-alert Brak wpisów, proszę zmienić kryteria wyszukiwania.
+    .panelPrzystanki__subtitle(ng-hide="sendForm") Nieaktywne przystanki
+    .panelPrzystanki__text(ng-hide="sendForm") Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
+    .panelPrzystanki__table(ng-hide="sendForm")
+      table.responsive(wt-responsive-table ng-controller="BusstopController")
+        thead
           tr
             th Nazwa przystanku
             th Ulica
@@ -46,7 +75,8 @@
             th Biletomat
             th Kiosk
             th Zarządzanie
-          tr(ng-repeat="przystanek in przystanki | filter:przystanekFilter | filter:{ BusStopStatus: '!0'} as filtrowanePrzystanku")
+        tbody
+          tr(ng-repeat="przystanek in przystanki | filter:przystanekFilter | filter:{ BusStopStatus: '0'} as filtrowanePrzystankuNieaktywe")
             td {{przystanek.Name}}
             td {{przystanek.LocalizationString}}
             td {{przystanek.BusStopTypeName}}
@@ -57,36 +87,10 @@
                 i.ionicons.ion-ios-location
               a(href="/#/busstop/show/{{ przystanek.Id }}").navigation
                 i.ionicons.ion-settings
-              a(href="/#/busstop/delete/{{ przystanek.Id }}").navigation
-                i.ionicons.ion-android-cancel.-red
-          tr(ng-hide="filtrowanePrzystanku.length")
+              a(href="/#/busstop/restore/{{ przystanek.Id }}").navigation
+                i.ionicons.ion-android-add-circle.-green
+          tr(ng-hide="filtrowanePrzystankuNieaktywe.length")
             td(colspan="6").-alert Brak wpisów, proszę zmienić kryteria wyszukiwania.
-    .panelPrzystanki__subtitle(ng-hide="sendForm") Nieaktywne przystanki
-    .panelPrzystanki__text(ng-hide="sendForm") Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
-    .panelPrzystanki__table(ng-hide="sendForm")
-      table.responsive(wt-responsive-table ng-controller="BusstopController")
-        tr
-          th Nazwa przystanku
-          th Ulica
-          th Typ Przystanku
-          th Biletomat
-          th Kiosk
-          th Zarządzanie
-        tr(ng-repeat="przystanek in przystanki | filter:przystanekFilter | filter:{ BusStopStatus: '0'} as filtrowanePrzystankuNieaktywe")
-          td {{przystanek.Name}}
-          td {{przystanek.LocalizationString}}
-          td {{przystanek.BusStopTypeName}}
-          td {{przystanek.GotMachineName}}
-          td {{przystanek.GotKioskName}}
-          td
-            a(href="/#/").navigation
-              i.ionicons.ion-ios-location
-            a(href="/#/busstop/show/{{ przystanek.Id }}").navigation
-              i.ionicons.ion-settings
-            a(href="/#/busstop/restore/{{ przystanek.Id }}").navigation
-              i.ionicons.ion-android-add-circle.-green
-        tr(ng-hide="filtrowanePrzystankuNieaktywe.length")
-          td(colspan="6").-alert Brak wpisów, proszę zmienić kryteria wyszukiwania.
     .panelPrzystanki__dataLoader(ng-show="sendForm")
       .panelPrzystanki__dataLoader__svg(ng-hide="CallbackServera")
         svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 80 80', xml:space='preserve')
