--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -14,14 +14,21 @@ html(lang="pl" ng-app="app")
           img(src="img/coffee-cup.png" alt="Team")
     .wrapper
       .googleMaps(ng-controller="MapController")
-        .googleMaps__API#googleMaps(ng-map="" center="[53.77842200000001, 20.48011930000007]" zoom="14" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]"
-        pan-control="false"
-        map-type-control="true"
-        map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}"
-        zoom-control="true"
-        zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}"
-        street-view-control="false"
-        scale-control="false"
-        )
+        .googleMaps__API#googleMaps
+          ng-map(center="[53.77842200000001, 20.48011930000007]" zoom="14" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]"
+          pan-control="false"
+          map-type-control="true"
+          map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}"
+          zoom-control="true"
+          zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}"
+          street-view-control="false"
+          scale-control="false"
+          )
+
+            //marker(id='busstop{{busstop.Id}}', position="{{lat}}, {{lng}}")
+
+
+
+
     script(src="app.js")
 
