--- a/app/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/app/blocks/panelAutobusy/_panelAutobusy.sass
@@ -11,12 +11,12 @@
     font-size: 1.3em
     +Roboto
   &__fastTravel
-    padding: 10px 15px
+    padding: 10px 20px
     text-transform: uppercase
     background-color: white
     +Roboto
     font-size: 0.7em
-    position: absolute
+    position: relative
     z-index: 1
     width: 100%
     span
@@ -42,12 +42,12 @@
           color: #208de6
           font-weight: 500
   &__wrapper
-    padding: 15px
+    padding: 0 20px 0 20px
     overflow-y: auto
-    position: absolute
+    position: relative
     bottom: 0
-    top: 50px
-    height: 80vh
+    top: 0
+    height: 85vh
 
     width: 100%
   &__subtitle
@@ -60,19 +60,23 @@
   &__text
     color: #88969F
     padding: 5px
+    line-height: 1.2em
+    margin-top: 5px
   &__filtrs
     display: flex
     flex-wrap: wrap
     justify-content: flex-start
   &__filtr
     width: 33%
-    padding: 6px
+    padding: 3px 6px
     +PHONE_ONLY
       width: 100%
     label
       display: block
       width: 100%
-      margin-bottom: 3px
+      margin-bottom: 1px
+      font-size: 12px
+      line-height: 1.2em
     input, select
       width: 100%
       height: 40px
@@ -83,6 +87,8 @@
       padding: 8px
       background-color: transparent
       box-shadow: none
+      transition: color ease .3s,box-shadow ease-in-out .15s,border-color ease-in-out .15s
+      font-size: 12px
 
     input[type=checkbox]
       display: none
