--- a/app/jade/panelDodajAutobus.jade
+++ b/app/jade/panelDodajAutobus.jade
@@ -10,8 +10,8 @@
     span.-active
       a(href="/#/bus/add") Dodaj Autobus
   .panelDodajAutobus__wrapper
-    .panelDodajAutobus__subtitle Dodawanie pojazdu do floty
-    .panelDodajAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
+    .panelDodajAutobus__subtitle Dodawanie autobusu do systemu
+    .panelDodajAutobus__text Tutaj możesz dodać autobus do systemu. Uzupełnij wszystkie poniższe pola.
     form(name="form" ng-controller="AddBusController" ng-submit="form.$valid && createBus()" novalidate )
       .panelDodajAutobus__content__form(ng-hide="sendForm")
           .panelDodajAutobus__content__form__item
@@ -64,6 +64,10 @@
               animatetransform(attributetype='xml', attributename='transform', type='rotate', from='0 40 40', to='360 40 40', dur='0.6s', repeatcount='indefinite')
         .panelDodajAutobus__dataLoader__text
           p(ng-hide="CallbackServera") {{ message }}
-          a(href="/#/bus" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green Autobus został dodany pomyślnie!
-          a(href="/#/bus/add" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red Coś poszło nie tak...
+          a(href="#/bus" ng-show="CallbackServeraPositive").panelDodajAutobus__navigation__item.green
+            i.fa.fa-check
+            | &nbsp;Autobus został dodany pomyślnie!
+          a(href="#/bus" ng-show="CallbackServeraNegative").panelDodajAutobus__navigation__item.red
+            i.fa.fa-reply
+            | &nbsp;Coś poszło nie tak...
 
