Panel rejestracji i logowania i wylogowywania :D

--- a/app/jade/panelLogin.jade
+++ b/app/jade/panelLogin.jade
@@ -29,7 +29,7 @@
         label(for="check")
           span.icon
           |  Zapamiętaj mnie
-      button Zaloguj się
+      button(type="submit") Zaloguj się
       .panelLogin__navigation Nie masz konta?
         a(href="/#/register").panelLogin__ToRegister Zarejestruj się.
       .panelLogin__navigation Nie pamietasz hasła?
