Panel rejestracji i logowania i wylogowywania :D

--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -39,7 +39,7 @@
               span(ng-show="form.uLat.$error.required").error-info Prosze podać współrzędne!
           .panelDodajPrzystanek__content__form__item
             span.item Koordynat Lng
-            input(placeholder="Lng" type="number" ng-model="Lng" required name="uLng")
+            input(placeholder="Lng" ng-model="Lng" required name="uLng")
             .row(ng-show="form.$submitted || form.uLng.$touched")
               span(ng-show="form.uLng.$error.required").error-info Prosze podać współrzędne!
           .panelDodajPrzystanek__content__form__item
