markery okienko informacyjne kosmetyka

--- a/app/blocks/googleMaps/_googleMaps.sass
+++ b/app/blocks/googleMaps/_googleMaps.sass
@@ -10,5 +10,10 @@
   &__API
     width: 100%
     height: 100%
-  ng-map
-    height: 100% !important
+    ng-map
+      height: 100% !important
+    &__infoWindow
+      table
+        tr
+          td:first-child
+            padding-right: 15px
