--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,7 +22,7 @@
 
 .fa {
   display: inline-block;
-  font: normal normal normal 14px / 1 FontAwesome;
+  font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -3943,11 +3943,11 @@ input,
 select,
 textarea,
 button {
-  font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 body {
-  font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #333;
   background-color: #fff;
 }
@@ -4657,7 +4657,7 @@ input::-webkit-inner-spin-button {
 }
 
 .status-indicator {
-  font: normal normal 16px / 1 "octicons";
+  font: normal normal 16px/1 "octicons";
   display: inline-block;
   text-decoration: none;
   -webkit-font-smoothing: antialiased;
@@ -9583,8 +9583,12 @@ a.tabnav-extra:hover {
   height: 100%;
 }
 
-.googleMaps ng-map {
+.googleMaps__API ng-map {
   height: 100% !important;
+}
+
+.googleMaps__API__infoWindow table tr td:first-child {
+  padding-right: 15px;
 }
 
 .bar {
