Panel rejestracji, poprawa formatu polskich liter

--- a/app/jade/panelRegister.jade
+++ b/app/jade/panelRegister.jade
@@ -8,14 +8,14 @@
             input(placeholder="E-mail" ng-model="Email" required name="uEmail" type="email")
             i.fa.fa-envelope-o
           .panelRegister__formwrapper
-            input(placeholder="HasÅ‚o" ng-model="Password" required name="uPassword" type="password")
+            input(placeholder="Hasło" ng-model="Password" required name="uPassword" type="password")
             i.fa.fa-lock
           .panelRegister__formwrapper
-            input(placeholder="PowtÃ³rz hasÅ‚o" ng-model="PasswordAgain" required name="uPasswordAgain" type="password")
+            input(placeholder="Powtórz hasło" ng-model="PasswordAgain" required name="uPasswordAgain" type="password")
             i.fa.fa-lock
           button Zarajestuj
-        .panelRegister__navigation(ng-hide="sendForm") Masz juÅ¼ konto?
-          a(href="/#/login").panelRegister__ToLogin Zaloguj siÄ™.
+        .panelRegister__navigation(ng-hide="sendForm") Masz już konto?
+          a(href="/#/login").panelRegister__ToLogin Zaloguj się.
         .panelDodajAutobus__dataLoader(ng-show="sendForm")
           .panelDodajAutobus__dataLoader__svg(ng-hide="CallbackServera")
             svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 80 80', xml:space='preserve')
@@ -44,14 +44,14 @@
             input(placeholder="E-mail" ng-model="Email" required name="uEmail" type="email")
             i.fa.fa-envelope-o
           .panelRegister__formwrapper
-            input(placeholder="HasÅ‚o" ng-model="Password" required name="uPassword" type="password")
+            input(placeholder="Hasło" ng-model="Password" required name="uPassword" type="password")
             i.fa.fa-lock
           .panelRegister__formwrapper
             input(placeholder="Token" ng-model="Token" required name="uToken" type="text")
             i.fa.fa-lock
           button Aktywuj
-        .panelRegister__navigation(ng-hide="sendForm") Masz juÅ¼ konto?
-          a(href="/#/login").panelRegister__ToLogin Zaloguj siÄ™.
+        .panelRegister__navigation(ng-hide="sendForm") Masz już konto?
+          a(href="/#/login").panelRegister__ToLogin Zaloguj się.
         .panelDodajAutobus__dataLoader(ng-show="sendForm")
           .panelDodajAutobus__dataLoader__svg(ng-hide="CallbackServera")
             svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 80 80', xml:space='preserve')
