--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -83,8 +83,8 @@
             td {{ autobus.BusStatusName }}
             td {{ autobus.GotMachineName }}
             td
-              a(href="#/").navigation
-                i.ionicons.ion-ios-location
+              //a(href="#/").navigation
+              //  i.ionicons.ion-ios-location
               a(href="#/bus/show/{{ autobus.Id }}").navigation
                 i.ionicons.ion-settings
               a(href="#/bus/restore/{{ autobus.Id }}").navigation
