--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -19,7 +19,7 @@
               .header__buttonIcon.fa.fa-map-signs
             | Przystanki
       li.header__item
-        a(href="#/roads")
+        a(href="#/track")
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-road
