Odświeżanie markerów fix

--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -1,4 +1,4 @@
-.panelAutobusy(ng-init="initBuss()")
+.panelAutobusy
   .panelAutobusy__title Zarządzanie Autobusami
   .panelAutobusy__fastTravel
     span
